Reset web_request_type for browser initiated requests

Browser initiated requests were getting the "main_frame" type in the web
request listener details, this gives them the correct "other" type.

Bug: 888672
Change-Id: Ie5e24c6f51c21ad57babb710e54cc5af47bb02c2
Reviewed-on: https://chromium-review.googlesource.com/1256562
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Clark DuVall <cduvall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595868}
Former-commit-id: 9dfe0d894205390137b49d85b440de1d6539772d