extensions/browser/api/web_request/web_request_proxying_url_loader_factory.cc
@@ -82,6 +82,7 @@ void WebRequestProxyingURLLoaderFactory::InProgressRequest::Restart() {
     // WebRequest logic that cares, e.g. some permission checking to determine
     // when to filter certain kinds of requests.
     info_->type.reset();
+    info_->web_request_type = WebRequestResourceType::OTHER;
   }
 
   auto continuation =
